--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Skape - Work Masonry 4 Col</title>
-	<meta name="description" content="Creative &amp; Modern Agency HTML5 Template">
+	<title>Will Musto - Sales Ops Systems Portfolio</title>
+	<meta name="description" content="Public case studies in workflow design, CRM systems, automation, and performance strategy.">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!--Favicon-->
@@ -554,8 +554,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-7 offset-md-1">
-							<h1 class="vlt-page-title__title">Projects
+							<h1 class="vlt-page-title__title">Sales Ops Systems Portfolio
 							</h1>
+							<p class="vlt-page-title__subtitle">Systems I've built to reduce manual work, improve visibility, and help sales teams scale with less friction.</p>
 						</div>
 						<div class="col-md-3 offset-md-1">
 							<div class="vlt-page-title__phantom-title lax" data-lax-translate-x="0 0, vw (vw*0.5)" data-lax-opacity="1 1, 250 0" data-lax-anchor=".vlt-page-title">Portfolio
@@ -584,11 +585,11 @@
 						<div class=" grid-item filter-design">
 							<!--Portfolio item-->
 							<article class="vlt-work vlt-work--style-2">
-								<div class="vlt-work__media"><a class="vlt-work__link has-cursor" href="#"></a><img src="assets/img/portfolio/masonry/masonry-4-col-1.png" alt="" loading="lazy">
+								<div class="vlt-work__media"><a class="vlt-work__link has-cursor" href="outreach-rollout.html"></a><img src="assets/img/portfolio/outreach-thumbnail.png" alt="Outreach System Rollout" loading="lazy">
 								</div>
 								<div class="vlt-work__meta">
-									<h5 class="vlt-work__title">Composition
-									</h5><span class="vlt-work__category">Design</span>
+									<h5 class="vlt-work__title">Outreach Rollout
+									</h5><span class="vlt-work__category">Automation</span>
 								</div>
 							</article>
 						</div>
